# JARVIS2026

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yml  properties.json  railway.json
src/: Rust JEPA1 2026  main.rs  main.rs backupworking 6 Jan2025
static/: app.js  index.html  style.css
