[package]
name = "jarvis-property-upload"
version = "1.0.0"
edition = "2021"
authors = ["Mikhael Abraham <mikhael@example.com>"]

[dependencies]
# Web framework
actix-web = "4.4"
actix-multipart = "0.6"
actix-rt = "2.9"
actix-cors = "0.6"
actix-files = "0.6"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures-util = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID and time
uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# Audio processing
cpal = "0.15"
anyhow = "1.0"

# Environment
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
